@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -39,8 +39,8 @@
  *
  * @library /test/lib
  * @compile excatch01a.jasm
- * @compile --enable-preview -source ${jdk.version} excatch01.java
- * @run main/othervm/native --enable-preview -agentlib:excatch01 excatch01
+ * @compile excatch01.java
+ * @run main/othervm/native -agentlib:excatch01 excatch01
  */
 
 
