@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -55,7 +55,7 @@ public class TestEventDuration {
 
             r.stop();
             List<RecordedEvent> events = Events.fromRecording(r);
-            if (events.get(0).getDuration().toNanos() < 1) {
+            if (events.getFirst().getDuration().toNanos() < 1) {
                 throw new AssertionError("Expected a duration");
             }
         }
